--- a/step3/index.html
+++ b/step3/index.html
@@ -8,14 +8,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="js-title">
-        <h1>00:00</h1>
-    </div>
-    <form class="js-form form">
-        <input type="text" placeholder="what is your name?">
+    <form class="name-data">
+        <input type="text" placeholder="what your name?">
     </form>
-    <h4 class="js-greeting greeting"></h4>
-    <script src="index.js"></script>
-    <script src="gretting.js"></script>
+    <ul class="comment"></ul>
+    <script src="todo.js"></script>
 </body>
 </html>
